admin page changes

--- a/MeetManagerPrism/MeetManagerPrism.csproj
+++ b/MeetManagerPrism/MeetManagerPrism.csproj
@@ -9,6 +9,28 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Changes.txt" />
+    <None Remove="Colors.txt" />
+    <None Remove="MeetUpAPP-UseCaseDiagram.png" />
+    <None Remove="Task.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Blueprints\Changes.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Blueprints\Colors.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Blueprints\MeetUpAPP-UseCaseDiagram.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Blueprints\Task.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Isopoh.Cryptography.Argon2" Version="2.0.0" />
     <PackageReference Include="MaterialDesignThemes" Version="5.2.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
